stylesheet.less
/* ... */
.bk-header .header-bg {
  width: 100%;
  background-color: @color-swatch1;
  padding: 20px 0;
}

/* SUB NAV */

.bk-header .bk-nav {
  width: 100%;
  background-color: @color-swatch7;
}

.companyheaderwrap {
  display: block;
}

/* COMPANY NAME */

.widget.companyname {
  width: 100%;
  text-align: center;
}

.companyname a:hover {
  text-decoration: none;
}

.widget.companyname a {
  font-family:@font-swatch10-font-family;
  font-weight: @font-swatch10-font-weight;
  color:@font-swatch10-color;
  line-height:@font-swatch10-line-height;
  letter-spacing: @font-swatch10-letter-spacing;
  font-size: @font-swatch10-font-size;
  padding: 10px 8px 8px;
}

/* LOGO */

.widget.logo {
  width: 100%;
  text-align: center;
}

/* ===============================
   FOOTER
   =============================== */

.bk-footer {
    background-color: @color-swatch7;
    padding: 2em 0;
    margin-top: 3em;
    color: @color-swatch6;
    text-align: left;
}

.bk-footer h1,
.bk-footer h2,
.bk-footer h3,
.bk-footer h4 {
    color: @color-swatch6;
    padding-bottom: 20px;
}

/* ===============================
   STANDARD NAVIGATION
   =============================== */

.widget.navigation {

}

.widget.navigation ul {
    padding: 0;
    margin: 30px 0;
}

.widget.navigation ul.align-center li {
    text-align: center
}

.widget.navigation ul.align-left li {
    text-align: left
}

.widget.navigation ul.align-right li {
    text-align: right
}

.widget.navigation ul li {
    float: left;
    display: block;
    padding-right: 40px;
}

.widget.navigation ul li a {
    display: block;
    font-family: @font-swatch6-font-family;
    font-size: @font-swatch6-font-size;
    font-weight: @font-swatch6-font-weight;
    color: @font-swatch6-color;
    line-height: @font-swatch6-line-height;
    letter-spacing: @font-swatch6-letter-spacing;
}

.widget.navigation ul li a:hover {
    text-decoration: none;
    color: @color-swatch3;
}

/* ===============================
   EXTENDED NAVIGATION
   =============================== */



.bk-nav {
  background-color: @color-swatch7;
}

.widget .extendednavigation {
    text-align: left;
    position: relative;
    background-color: @color-swatch7;
    float: none;
    max-width: 100%;
}

.widget .extendednavigation ul {
    display: table;
    margin: 0 auto;
    padding: 0;
    float: none;
}

.widget.extendednavigation a.pull {
    display: none
}

/* ALIGNMENTS */

.widget.extendednavigation ul.align-center li,
.widget.extendednavigation ul.align-center li:hover ul li {
    text-align: center;
}

.widget.extendednavigation ul.align-left li,
.widget.extendednavigation ul.align-left li:hover ul li {
    text-align: left;
}

.widget.extendednavigation ul.align-right li,
.widget.extendednavigation ul.align-right li:hover ul li {
    text-align: right;
}

.widget.extendednavigation ul li {
    float: left;
    display: block;
}

.widget.extendednavigation ul li a {
    display: block;
    padding: 18px 20px;
    font-family: @font-swatch6-font-family;
    font-size: @font-swatch6-font-size;
    font-weight: @font-swatch6-font-weight;
    color: @font-swatch6-color;
    line-height: @font-swatch6-line-height;
    letter-spacing: @font-swatch6-letter-spacing;
}

.widget.extendednavigation ul li.folder .text {
    display: block;
    padding: 18px 30px 18px 20px;
    font-family: @font-swatch6-font-family;
    font-size: @font-swatch6-font-size;
    font-weight: @font-swatch6-font-weight;
    color: @font-swatch6-color;
    line-height: @font-swatch6-line-height;
    letter-spacing: @font-swatch6-letter-spacing;
  }

.widget.extendednavigation ul li a:hover,
.widget.extendednavigation ul li.folder .text:hover {
    color: @font-swatch6-color-hover;
    background-color: @font-swatch6-background-color-hover;
    text-decoration: none;
}

/* FOLDER */

.widget.extendednavigation ul li.folder {
    //background-image: image('/images/arrow-down.png');
    background-position: right 29px;
    background-repeat: no-repeat;
    cursor: pointer;
    &:after {
	    right: 14px;
		top: 48%;
    }
}

.widget.extendednavigation ul li.folder .text:hover {
    color: @font-swatch6-color-hover;
    //background-image: image('/images/arrow-down.png');
    background-position: right 29px;
    background-repeat: no-repeat;
}

.widget.extendednavigation ul li.folder > ul > li .text:hover {
  background-image: none;
}
.widget .extendednavigation ul li.folder:after {
	right: 12px;
	top: 49%;
}

/* DROPDOWN MENU */

.widget.extendednavigation li > ul {
    display: none
}

.widget.extendednavigation li:hover > ul {
    display: block;
    position: absolute;
    width: auto;
    background-color: @color-swatch7;
    z-index: 500;
    padding: 0;
    margin: 0;
}

.widget .extendednavigation ul li:hover ul {
	background-color: @color-swatch7;
}

.widget.extendednavigation li:hover > ul > li {
    display: block;
    width: 100%;
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box; /* Firefox, other Gecko */
    box-sizing: border-box; /* Opera/IE 8+ */
}

.widget.extendednavigation li:hover > ul > li > a {
    display: block;
    color: @color-swatch5;
    padding: 0;
}

/* EXTENDED NAVIGATION - INSIDE ZONE */

.main .widget.extendednavigation {
    max-width: 100%;
    width: 100%;
    float: none;
}

.main .widget.extendednavigation:before,
.main .widget.extendednavigation:after {
    content: " ";
    display: table;
}

.main .widget.extendednavigation:after {
    clear: both
}

.main .widget.extendednavigation {
    *zoom: 1
}

/* ===============================
   FEATURE
   =============================== */

 .widget.feature {
  width: 960px;
  margin: 0 auto;
 }

.widget.feature .feature-bgimg {
  height: 500px;
 }

.widget.feature .content {
  height: 500px;
  padding: 10px 0;
  vertical-align: middle;
  text-align: center;
}
/* ... */

